name:           snap
version:        0.14.0.7
synopsis:       Top-level package for the Snap Web Framework
description:
    This is the top-level package for the official Snap Framework libraries.
    It includes:
    .
    * The Snaplets API
    .
    * The \"snap\" executable program for generating starter projects
    .
    * Snaplets for sessions, authentication, and templates
    .
    To get started, issue the following sequence of commands:
    .
    @$ cabal install snap
    $ mkdir myproject
    $ cd myproject
    $ snap init@
    .
    If you have trouble or any questions, see our FAQ page
    (<http://snapframework.com/faq>) or the documentation
    (<http://snapframework.com/docs>).

license:        BSD3
license-file:   LICENSE
author:         Ozgun Ataman, Doug Beardsley, Gregory Collins, Carl Howells, Chris Smith
maintainer:     snap@snapframework.com
build-type:     Simple
cabal-version:  >= 1.8
homepage:       http://snapframework.com/
category:       Web, Snap

extra-source-files:
  CHANGELOG.md,
  CONTRIBUTORS,
  LICENSE,
  README.md,
  README.SNAP.md,
  project_template/barebones/.ghci,
  project_template/barebones/foo.cabal,
  project_template/barebones/log/access.log,
  project_template/barebones/src/Main.hs,
  project_template/default/.ghci,
  project_template/default/foo.cabal,
  project_template/default/log/access.log,
  project_template/default/log/error.log,
  project_template/default/static/screen.css,
  project_template/default/snaplets/heist/templates/base.tpl,
  project_template/default/snaplets/heist/templates/index.tpl,
  project_template/default/snaplets/heist/templates/_login.tpl,
  project_template/default/snaplets/heist/templates/login.tpl,
  project_template/default/snaplets/heist/templates/_new_user.tpl,
  project_template/default/snaplets/heist/templates/new_user.tpl,
  project_template/default/snaplets/heist/templates/userform.tpl,
  project_template/default/src/Application.hs,
  project_template/default/src/Main.hs,
  project_template/default/src/Site.hs,
  project_template/tutorial/.ghci,
  project_template/tutorial/foo.cabal,
  project_template/tutorial/log/placeholder,
  project_template/tutorial/src/Part2.lhs,
  project_template/tutorial/src/Tutorial.lhs,
  extra/hscolour.css,
  extra/haddock.css,
  extra/logo.gif,
  test/snap-testsuite.cabal,
  test/runTestsAndCoverage.sh,
  test/suite/TestSuite.hs,
  test/suite/NestTest.hs,
  test/suite/Snap/TestCommon.hs,
  test/suite/Snap/Snaplet/Internal/Lensed/Tests.hs,
  test/suite/Snap/Snaplet/Internal/RST/Tests.hs,
  test/suite/Snap/Snaplet/Internal/Tests.hs,
  test/suite/Snap/Snaplet/Internal/LensT/Tests.hs,
  test/suite/Blackbox/Types.hs,
  test/suite/Blackbox/FooSnaplet.hs,
  test/suite/Blackbox/BarSnaplet.hs,
  test/suite/Blackbox/Common.hs,
  test/suite/Blackbox/EmbeddedSnaplet.hs,
  test/suite/Blackbox/Tests.hs,
  test/suite/Blackbox/App.hs,
  test/suite/SafeCWD.hs,
  test/suite/AppMain.hs,
  test/non-cabal-appdir/db.cfg,
  test/non-cabal-appdir/bad.tpl,
  test/non-cabal-appdir/snaplets/baz/templates/bazpage.tpl,
  test/non-cabal-appdir/snaplets/baz/templates/bazconfig.tpl,
  test/non-cabal-appdir/snaplets/baz/devel.cfg,
  test/non-cabal-appdir/snaplets/embedded/extra-templates/extra.tpl,
  test/non-cabal-appdir/snaplets/embedded/snaplets/heist/templates/embeddedpage.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/index.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/session.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/splicepage.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/page.tpl,
  test/non-cabal-appdir/good.tpl,
  test/non-cabal-appdir/log/placeholder,
  test/non-cabal-appdir/devel.cfg,
  test/foosnaplet/templates/foopage.tpl,
  test/foosnaplet/devel.cfg

Library
  hs-source-dirs: src

  exposed-modules:
    Snap,
    Snap.Snaplet
    Snap.Snaplet.Heist
    Snap.Snaplet.HeistNoClass
    Snap.Snaplet.Heist.Compiled
    Snap.Snaplet.Heist.Generic
    Snap.Snaplet.Heist.Interpreted
    Snap.Snaplet.Auth
    Snap.Snaplet.Auth.Backends.JsonFile
    Snap.Snaplet.Config
    Snap.Snaplet.Session
    Snap.Snaplet.Session.Common
    Snap.Snaplet.Session.SessionManager
    Snap.Snaplet.Session.Backends.CookieSession
    Snap.Snaplet.Test

  other-modules:
    Control.Access.RoleBased.Checker
    Control.Access.RoleBased.Role
    Control.Access.RoleBased.Types
    Control.Access.RoleBased.Internal.Role
    Control.Access.RoleBased.Internal.RoleMap
    Control.Access.RoleBased.Internal.Rule
    Control.Access.RoleBased.Internal.Types
    Snap.Snaplet.Auth.AuthManager
    Snap.Snaplet.Auth.Types
    Snap.Snaplet.Auth.Handlers
    Snap.Snaplet.Auth.Handlers.Errors
    Snap.Snaplet.Auth.SpliceHelpers
    Snap.Snaplet.Heist.Internal
    Snap.Snaplet.Internal.Initializer
    Snap.Snaplet.Internal.LensT
    Snap.Snaplet.Internal.Lensed
    Snap.Snaplet.Internal.RST
    Snap.Snaplet.Internal.Types
    Snap.Snaplet.Session.SecureCookie

  build-depends:
    MonadCatchIO-transformers,
    aeson,
    attoparsec,
    base,
    bytestring,
    cereal,
    clientsession,
    comonad,
    configurator,
    containers,
    directory,
    directory-tree,
    dlist,
    either,
    filepath,
    hashable,
    heist,
    lens,
    logict,
    mtl,
    mwc-random,
    pwstore-fast,
    regex-posix,
    snap-core,
    snap-server,
    stm,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    vector-algorithms,
    xmlhtml

  extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    OverloadedStrings,
    PackageImports,
    Rank2Types,
    RecordWildCards,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Executable snap
  hs-source-dirs: src
  main-is: Snap/Starter.hs

  other-modules: Snap.StarterTH

  build-depends:
    base,
    bytestring,
    containers,
    directory,
    directory-tree,
    filepath,
    hashable,
    old-time,
    snap-server,
    template-haskell,
    text

  extensions:
    OverloadedStrings

  other-extensions:
    TemplateHaskell

  ghc-prof-options: -prof -auto-all

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/snapframework/snap.git
